Fixed the font-size and margins on small devices

--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,10 @@ body{
 }
 
 @media screen and (max-width:500px) {
+    .calculator {
+        margin-top: 10%;
+    }
     #display, .buttons button{
-        font-size: 1rem;
+        font-size: 13px;
     }
 }
